--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+	--redCard: #FF5733;
+  --yellowCard: #FFEA00;
+  --greenCard: #AFE1AF;
+  --blueCard: #0096FF;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
