--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
-	--redCard: #FF5733;
-  --yellowCard: #FFEA00;
-  --greenCard: #AFE1AF;
-  --blueCard: #0096FF;
+	--redCard: #FF4C4C;
+  --purpleCard: #b84fce;
+  --greenCard: #00BA78;
+  --blueCard: #0974f1;
 }
 
 body {
